finalizing flows and adding unit tests
